added bootswatch theme and styles for the UI

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="./bootstrap/bootstrap.min.css" />
     <title>Dota Heroes App</title>
   </head>
   <body>
